oxiplate-derive/tests/broken/external/directory.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate = "subdirectory"]
struct Data;

fn main() {
    print!("{}", Data);
}
